--- a/3-4/src/main/webapp/WEB-INF/classes/messages_ko.properties
+++ b/3-4/src/main/webapp/WEB-INF/classes/messages_ko.properties
@@ -5,6 +5,7 @@ error.required.user.password = \uC554\uD638\uB97C \uC785\uB825\uD558\uC138\uC694
 error.required.user.userName = \uC774\uB984\uC744 \uC785\uB825\uD558\uC138\uC694.
 error.required.user.address = \uC8FC\uC18C\uB97C \uC785\uB825\uD558\uC138\uC694.
 error.required.user.email = \uC774\uBA54\uC77C\uC744 \uC785\uB825\uD558\uC138\uC694.
+error.required.user.tel = \uC5F0\uB77D\uCC98\uB97C \uC785\uB825\uD558\uC138\uC694.
 error.required.user.birthday = \uC0DD\uB144\uC6D4\uC77C\uC744 \uC785\uB825\uD558\uC138\uC694.
 typeMistmatch.user.birthday = \uC0DD\uB144\uC6D4\uC77C\uC740 20201123\uD615\uC2DD\uC73C\uB85C \uC785\uB825\uD558\uC138\uC694.
 error.duplicate.user = \uC785\uB825\uD55C ID\uB294 \uC774\uBBF8 \uC0AC\uC6A9\uC911\uC785\uB2C8\uB2E4.
