--- a/3-4/src/main/webapp/WEB-INF/classes/messages_ko.properties.org
+++ b/3-4/src/main/webapp/WEB-INF/classes/messages_ko.properties.org
@@ -5,6 +5,7 @@ error.required.user.password = 암호를 입력하세요.
 error.required.user.userName = 이름을 입력하세요.
 error.required.user.address = 주소를 입력하세요.
 error.required.user.email = 이메일을 입력하세요.
+error.required.user.tel = 연락처를 입력하세요.
 error.required.user.birthday = 생년월일을 입력하세요.
 typeMistmatch.user.birthday = 생년월일은 20201123형식으로 입력하세요.
 error.duplicate.user = 입력한 ID는 이미 사용중입니다.
